[package]
name = "growth-ring"
version = "0.2.2"
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Determinant/growth-ring"
keywords = ["wal", "db", "futures"]
license = "MIT"
description = "Simple and modular write-ahead-logging implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.8.1"
lru = "0.6.3"
scan_fmt = "0.2.5"
regex = "1.4.2"
async-trait = "0.1.42"
futures = "0.3.8"
libaio-futures = "0.2.1"
nix = "0.19.1"
libc = "0.2.81"

[dev-dependencies]
hex = "0.4.2"
rand = "0.8.0"
indexmap = "1.6.1"

[patch.crates-io]
#libaio-futures = { path = "/home/ymf/work/current/libaio-futures" }

[lib]
name = "growthring"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]


[profile.release]
lto = true
