[package]
name = "growth-ring"
version = "0.3.1"
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Determinant/growth-ring"
keywords = ["wal", "db", "futures"]
license = "MIT"
description = "Simple and modular write-ahead-logging implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.1"
lru = "0.12.2"
scan_fmt = "0.2.6"
regex = "1.10.3"
async-trait = "0.1.77"
futures = "0.3.30"
libaio-futures = "0.2.3"
nix = { version = "0.27.1", features = ["dir"] }
libc = "0.2.153"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
indexmap = "2.2.2"

[patch.crates-io]
#libaio-futures = { path = "/home/ymf/work/current/libaio-futures" }

[lib]
name = "growthring"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]


[profile.release]
lto = true
